--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-/node_modules
-/public
+node_modules/
+/dist/
+
+# local env files
 .env
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
